<resources>
    <string name="app_name">Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="persian">فارسی</string>
    <string name="english">english</string>
    <string name="example">example</string>
    <string name="synonyms">synonyms</string>
    <string name="save">save</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف کلمه</string>
    <string name="detail">جزییات</string>
    <string name="error_empty">\" یک کلمه بنویسید: \"</string>
    <string name="empty">خالی</string>
    <string name="link">link</string>
    <string name="count">"تعداد لغات: "</string>
    <string name="_0">0</string>
</resources>