<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AddWordFragment">

    <EditText
        android:id="@+id/edt_add_persian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/persian"
        />

    <EditText
        android:id="@+id/edt_add_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/english"
        />

    <EditText
        android:id="@+id/edt_add_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example"
        />

    <EditText
        android:id="@+id/edt_add_synonyms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/synonyms"
        />
    <Button
        android:id="@+id/btn_save_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>



</LinearLayout>