<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.dictionary.repository.WordViewModel" />
        <variable
            name="id"
            type="Integer" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/view_margin"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txv_en"
                android:text="@{viewModel.getWord(id).en}"
                tools:text="@string/english"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_margin"
                style="@style/txv_home_style" />

            <TextView
                android:id="@+id/txv_fa"
                tools:text="@string/persian"
                android:text="@{viewModel.getWord(id).fa}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txv_en"
                style="@style/txv_home_style" />

            <TextView
                android:id="@+id/txv_synonyms"
                tools:text="@string/synonyms"
                android:text="@{viewModel.getWord(id).synonyms}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txv_fa"
                style="@style/txv_home_style" />

            <TextView
                android:id="@+id/txv_example"
                tools:text="@string/example"
                android:text="@{viewModel.getWord(id).example}"
                android:verticalScrollbarPosition="defaultPosition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txv_synonyms"
                style="@style/txv_home_style" />

            <Button
                android:id="@+id/btn_edit_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_delete_word"
                app:layout_constraintTop_toBottomOf="@+id/txv_example" />

            <Button
                android:id="@+id/btn_delete_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txv_example"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>