<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_circle"
    tools:context=".view.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txv_fa_en_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imv_change_mode"
            android:text="@string/english"
            android:layout_margin="10dp"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/imv_change_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_sync_alt_24"
            app:layout_constraintStart_toEndOf="@id/txv_fa_en_left"
            app:layout_constraintEnd_toStartOf="@id/txv_fa_en_right"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/txv_fa_en_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imv_change_mode"
            android:text="@string/persian"
            android:layout_margin="10dp"/>

        <SearchView
            android:id="@+id/search_view_home"
            style="@style/txv_home_style"
            android:minHeight="54dp"
            android:background="@drawable/bg_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_change_mode"/>

        <TextView
            android:id="@+id/txv_en"
            android:text="@string/english"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view_home"
            style="@style/txv_home_style" />
        <TextView
            android:id="@+id/txv_fa"
            android:text="@string/persian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_en"
            style="@style/txv_home_style" />
        <TextView
            android:id="@+id/txv_synonyms"
            android:text="@string/synonyms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_fa"
            style="@style/txv_home_style" />
        <TextView
            android:id="@+id/txv_example"
            android:text="@string/example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_synonyms"
            style="@style/txv_home_style" />

        <ImageButton
            android:id="@+id/imv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:minWidth="30dp"
            android:src="@drawable/before"
            android:background="@drawable/bg_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_example"
            android:layout_margin="18dp"/>

        <ImageButton
            android:id="@+id/imv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next"
            android:minHeight="30dp"
            android:minWidth="30dp"
            android:background="@drawable/bg_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_example"
            android:layout_margin="18dp"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/imv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>